2008-04-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (switch-to-root-frame): show later -
	new key parameter to have less flickering.

2008-04-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (frame-layout-once-menu): Set the
	layout only one time and revert to no-layout to freely handle
	frames.

	* src/clfswm-nw-hooks.lisp
	(open-in-new-frame-in-root-frame-nw-hook): Tile layout with spaces
	with new created window.

	* src/clfswm-layout.lisp (register-layout): Now register
	automatically a once layout to set the layout only one time and
	revert to no-layout to freely handle frames.

2008-04-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (leave-focus-frame-nw-hook): New
	nw-hook: Open the next window in the current frame and leave the
	focus to the current child.

2008-04-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp: Add keys definitions to
	bind-or-jump in the second mode.

	* src/clfswm-util.lisp (bind-or-jump): remove the auto-defining
	macro for bind-or-jump-(1|2|3...).

	* src/clfswm-keys.lisp (define-define-key/mouse): Allow additional
	arguments to function. This allow to do things like:
 	(define-main-key (key) 'my-function 10 20 'foo) -> 10 20 and 'foo
	are passed to my-function on key press.

2008-04-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (bind-or-jump): New (great) function.

2008-04-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (child-fullname): New function

	* src/clfswm-info.lisp (info-mode-menu): Add an explicit optional
	docstring in info-mode-menu. An item can be 
	'((key function) (key function)) or with docstring
	'((key function "documentation 1") (key function "bla bla") (key function)) 

	* src/tools.lisp (ensure-n-elems): New function.

	* src/bindings-second-mode.lisp: Bind Alt+mouse-1/3 to move or